# baibot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.ci  README.md  docker-compose.yaml  justfile  mise.toml  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml  workflow.yml
docs/: README.md  access.md  agents.md  development.md  features.md  installation.md  providers.md  usage.md
docs/configuration/: README.md  authentication.md  handlers.md  image-generation.md  speech-to-text.md  text-generation.md  text-to-speech.md
docs/sample-provider-configs/: anthropic.yml  groq.yml  localai.yml  mistral.yml  ollama.yml  openai-compatible.yml  openai-o1.yml  openai.yml  openrouter.yml  together-ai.yml  venice.yml
etc/app/: config.yml.dist
etc/assets/: baibot.xcf
etc/database/: db.sqlite
etc/database/tables/: asnwers.sql  responses.sql
etc/services/: .env  env.dist
etc/services/continuwuity/: compose.yml  register-user.sh
etc/services/continuwuity/config/: continuwuity.toml
etc/services/core/: compose.yml
etc/services/core/element-web/: config.json
etc/services/core/synapse/config/: homeserver.yaml
etc/services/element-web/: compose.yml  config.json.dist
etc/services/localai/: compose.yml
etc/services/ollama/: compose.yml
etc/services/synapse/: compose.yml
etc/services/synapse/config/: homeserver.yaml
src/: lib.rs  main.rs
src/agent/: definition.rs  identifier.rs  instantiation.rs  manager.rs  mod.rs  purpose.rs  utils.rs
src/agent/provider/: config.rs  controller.rs  mod.rs
src/agent/provider/anthropic/: config.rs  controller.rs  mod.rs  utils.rs
src/agent/provider/entity/: agent_provider.rs  image.rs  image_generation.rs  mod.rs  ping.rs  speech_to_text.rs  text_generation.rs  text_to_speech.rs
src/agent/provider/entity/text_generation/: mod.rs  prompt_variables.rs
src/agent/provider/groq/: mod.rs
src/agent/provider/localai/: mod.rs
src/agent/provider/mistral/: mod.rs
src/agent/provider/ollama/: mod.rs
src/agent/provider/openai/: config.rs  controller.rs  mod.rs  utils.rs
src/agent/provider/openai_compat/: config.rs  controller.rs  mod.rs  utils.rs
src/agent/provider/openrouter/: mod.rs
src/agent/provider/togetherai/: mod.rs
src/agent/provider/venice/: audio.rs  chat.rs  config.rs  controller.rs  images.rs  mod.rs  recovery.rs  tests.rs  utils.rs  wire.rs
src/bot/: implementation.rs  load_config.rs  messaging.rs  mod.rs  reacting.rs  rooms.rs
src/controller/: controller_type.rs  dispatching.rs  mod.rs
src/controller/access/: dispatching.rs  help.rs  mod.rs  room_local_agent_managers.rs  users.rs
src/controller/access/determination/: mod.rs  tests.rs
src/controller/agent/: mod.rs
src/controller/agent/create/: mod.rs  tests.rs
src/controller/agent/delete/: mod.rs
src/controller/agent/details/: mod.rs
src/controller/agent/determination/: mod.rs  tests.rs
src/controller/agent/help/: mod.rs
src/controller/agent/list/: mod.rs
src/controller/cfg/: controller_type.rs  help.rs  mod.rs  status.rs
src/controller/cfg/common/: generic_setting.rs  mod.rs
src/controller/cfg/determination/: mod.rs  tests.rs
src/controller/cfg/determination/speech_to_text/: mod.rs  tests.rs
src/controller/cfg/determination/text_generation/: mod.rs  tests.rs
src/controller/cfg/determination/text_to_speech/: mod.rs  tests.rs
src/controller/cfg/dispatching/: mod.rs  speech_to_text.rs  text_generation.rs  text_to_speech.rs
src/controller/cfg/global_config/: generic_setting.rs  handler.rs
src/controller/cfg/room_config/: generic_setting.rs  handler.rs  mod.rs
src/controller/chat_completion/: message_aggregator.rs  mod.rs
src/controller/determination/: mod.rs  tests.rs
src/controller/help/: mod.rs
src/controller/image/: edit.rs  generation.rs  mod.rs  prompt.rs
src/controller/image/determination/: mod.rs  tests.rs
src/controller/join/: mod.rs
src/controller/provider/: mod.rs
src/controller/reaction/: mod.rs  text_to_speech.rs
src/controller/usage/: mod.rs
src/controller/utils/: agent.rs  mime.rs  mod.rs  text_to_speech.rs
src/conversation/: matrix_llm_bridge.rs  mod.rs
src/conversation/llm/: entity.rs  mod.rs  tests.rs  tokenization.rs  utils.rs
src/conversation/matrix/: entity.rs  mod.rs  room_display_name_fetcher.rs  room_event_fetcher.rs
src/conversation/matrix/utils/: mod.rs  tests.rs
src/entity/: interaction_context.rs  message_context.rs  message_payload.rs  mod.rs  room_config_context.rs  thread_context.rs  trigger_event_info.rs
src/entity/catch_up_marker/: delayed_catch_up_marker_manager.rs  entity.rs  mod.rs
src/entity/cfg/: config.rs  config_tests.rs  defaults.rs  env.rs  mod.rs
src/entity/globalconfig/: entity.rs  mod.rs
src/entity/roomconfig/: defaults.rs  mod.rs
src/entity/roomconfig/entity/: handler.rs  mod.rs  speech_to_text.rs  text_generation.rs  text_to_speech.rs
src/repository/: mod.rs  sqlite.rs
src/strings/: access.rs  agent.rs  cfg.rs  error.rs  global_config.rs  image_edit.rs  image_generation.rs  introduction.rs  mod.rs  provider.rs  room_config.rs  speech_to_text.rs  text_to_speech.rs  thinking.rs  usage.rs
src/strings/help/: access.rs  agent.rs  cfg.rs  mod.rs  provider.rs  usage.rs
src/utils/: base64.rs  mime.rs  mod.rs  status.rs  text.rs  text_to_speech.rs
